kb(java/algorithms): add 5 topics (backtracking, divide-and-conquer, probabilistic-algorithms, computational-geometry, jvm-performance-tuning) + restructure none